--- a/.github/workflows/generate-releases-content.yml
+++ b/.github/workflows/generate-releases-content.yml
@@ -1,12 +1,10 @@
-name: gh-on-issue
-
+name: generate-releases-content
 on:
-  push:
-    tags:
-      - '*'
+  workflow_dispatch:
 
 jobs:
-  job1:
+  generate-releases-content:
+    name: GenerateReleasesContent
     runs-on: ubuntu-latest
     steps:
       - name: Setup Hugo
@@ -14,38 +12,41 @@ jobs:
         with:
           hugo-version: '0.91.2'
           extended: true
-
       - uses: actions/checkout@v2
-
-      - name: Get the version
-        id: get_version
-        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
-        shell: bash
-
+        with:
+          ref: releases
+          fetch-depth: 0 # To get all tags
       - name: Create content
-        env:
-          RELEASE_VERSION: ${{ steps.get_version.outputs.VERSION }}
         run : |
           pushd docs
             mkdir themes
-            
+          
             pushd themes
               git clone https://github.com/laraboot-io/images-theme.git
               rm -rf images-theme/content/*
             popd
-            
+          
             mkdir -p content/writing
-            file="content/writing/${{ github.sha }}.md"
-  
-            touch $file
-            echo "---" > $file
-            echo "title: \"${RELEASE_VERSION}\"" >> $file
-            echo "date: 2021-11-14T22:40:38Z" >> $file
-            echo "draft: false" >> $file
-            echo "---" >> $file
-            echo "" >> $file
-            echo "${RELEASE_VERSION}" >> $file
-  
+          
+            tags=$(curl https://api.github.com/repos/laravel/framework/tags | jq -rc '.')
+            for row in $(echo "${tags}" | jq -r '.[] | @base64'); do
+                _jq() {
+                 echo ${row} | base64 --decode | jq -r ${1}
+                }
+               tag=$(_jq '.name')
+               url=$(_jq '.zipball_url')
+               echo "-----"
+                file="content/writing/${tag}.md"
+                touch $file
+                echo "---" > $file
+                echo "title: \"${tag}\"" >> $file
+                echo "date: 2021-11-14T22:40:38Z" >> $file
+                echo "draft: false" >> $file
+                echo "---" >> $file
+                echo "" >> $file
+                echo "${url}" >> $file
+            done
+          
             hugo -D -b https://laraboot-io.github.io/laravel-images/ -t images-theme
           popd
 
