--- a/.github/workflows/gh-on-tag.yml
+++ b/.github/workflows/gh-on-tag.yml
@@ -190,6 +190,14 @@ jobs:
           chmod +x ./scripts/features.sh
           LARAVEL_DIR_APP="${cwd}/${dirname}" ./scripts/features.sh
 
+      - name: Docker login
+        uses: docker/login-action@v1
+        if: matrix.flavor == 'simple'
+        with:
+          registry: docker.io
+          username: ${{ secrets.DOCKER_HUB_USER }}
+          password: ${{ secrets.DOCKER_HUB_PASS }}
+
       - name: CR Release
         env:
           LOCAL_IMAGE: simple
