--- a/.github/workflows/gh-on-tag.yml
+++ b/.github/workflows/gh-on-tag.yml
@@ -170,6 +170,11 @@ jobs:
         id: get_version
         run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
         shell: bash
+      - name: Setup Cli
+        id: setupcli
+        continue-on-error: false
+        run: |
+          npm i -g @laraboot-io/cli@next
       - name: Build custom
         id: flavor
         env:
