wip: release app tarball as oci layer

--- a/.github/workflows/night-build.yml
+++ b/.github/workflows/night-build.yml
@@ -184,6 +184,13 @@ jobs:
           tar -zxf app.tar.gz -C $dirname
           chmod +x ./scripts/release-base-cr.sh
           ./scripts/release-base-cr.sh -d $dirname
+          runnableDir=$(mktemp -d)
+          pushd $runnableDir
+          mkdir -p usr/src/app
+          tar -zxf app.tar.gz -C "$dirname/usr/src/app"
+          ./scripts/release-base-cr.sh -d $dirname -t cli -b thecodingmachine/php:8.1-v4-cli
+          popd
+
       - name: Build custom
         id: flavor
         continue-on-error: false
