--- a/.github/workflows/night-build.yml
+++ b/.github/workflows/night-build.yml
@@ -149,7 +149,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: buildpacks/github-actions/setup-pack@v4.4.2
         with:
-          crane-version: v0.9.0
+          crane-version: 0.9.0
       - name: Crane auth login
         env:
           CI_REGISTRY: docker.io
