--- a/.github/workflows/night-build.yml
+++ b/.github/workflows/night-build.yml
@@ -128,7 +128,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
-          name: app
+          name: ${{ matrix.php-versions }}-app
           path: /tmp/${{ matrix.php-versions }}-app.tar.gz
       - name: Upload artifact
         uses: actions/upload-artifact@v2
