--- a/.github/workflows/night-build.yml
+++ b/.github/workflows/night-build.yml
@@ -133,7 +133,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
-          name: version
+          name: ${{ matrix.php-versions }}-version
           path: /tmp/version.txt
   release-base:
     strategy:
