--- a/.github/workflows/night-build.yml
+++ b/.github/workflows/night-build.yml
@@ -2,7 +2,7 @@ name: night-build
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 * * * *"
+    - cron: "0 2 * * *"
   push:
     branches:
       - master
