--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -144,7 +144,7 @@ jobs:
       max-parallel: 1
       matrix:
         operating-system: [ ubuntu-latest ]
-        flavor: [ 'simple', 'with-breeze','with-jetstream' ]
+        flavor: [ 'simple' ]
     steps:
       - uses: buildpacks/github-actions/setup-pack@v4.4.2
       - uses: actions/checkout@v2
